// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build up data methods/computed props for ganttData buildGanttData maps data ready for rendering on the gantt 1`] = `
Array [
  Object {
    "blocks": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "dependencies": Array [],
            "duration": 2,
            "end": "2018-07-25",
            "event_index": 4,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "foo",
            "height": 20,
            "label": "#fbbd08",
            "offset": 25,
            "page": 1,
            "repeat": true,
            "start": "2018-07-25",
            "status": "in_progress",
            "title": "A New Event",
            "width": 58.2,
            "x": 698.4000000000001,
            "y": 182.5,
          },
          Object {
            "children": Array [],
            "dependencies": Array [],
            "duration": 2,
            "end": "2018-08-01",
            "event_index": 4,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "foo",
            "height": 20,
            "label": "#fbbd08",
            "offset": 32,
            "page": 1,
            "repeat": true,
            "start": "2018-08-01",
            "status": "in_progress",
            "title": "A New Event",
            "width": 58.2,
            "x": 902.1,
            "y": 182.5,
          },
          Object {
            "children": Array [],
            "dependencies": Array [],
            "duration": 2,
            "end": "2018-08-08",
            "event_index": 4,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "foo",
            "height": 20,
            "label": "#fbbd08",
            "offset": 39,
            "page": 1,
            "repeat": true,
            "start": "2018-08-08",
            "status": "in_progress",
            "title": "A New Event",
            "width": 58.2,
            "x": 1105.8,
            "y": 182.5,
          },
          Object {
            "children": Array [],
            "dependencies": Array [],
            "duration": 2,
            "end": "2018-08-15",
            "event_index": 4,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "foo",
            "height": 20,
            "label": "#fbbd08",
            "offset": 46,
            "page": 1,
            "repeat": true,
            "start": "2018-08-15",
            "status": "in_progress",
            "title": "A New Event",
            "width": 58.2,
            "x": 1309.5,
            "y": 182.5,
          },
        ],
        "dependencies": Array [],
        "duration": 2,
        "event_index": 4,
        "frequency": Object {
          "key": "weekly",
        },
        "group_by": "foo",
        "height": 20,
        "label": "#fbbd08",
        "offset": 18,
        "page": 1,
        "status": "in_progress",
        "title": "A New Event",
        "width": 58.2,
        "x": 494.70000000000005,
        "y": 182.5,
      },
    ],
    "groupings": Array [
      "a new event",
    ],
    "height": 35,
    "links": Array [],
    "show": true,
    "title": "foo",
  },
  Object {
    "blocks": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "dependencies": Array [],
            "duration": 2,
            "end": "2018-07-25",
            "event_index": 0,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "bar",
            "height": 20,
            "label": "#6bc2e2",
            "offset": 27,
            "page": 1,
            "repeat": true,
            "start": "2018-07-25",
            "status": "active",
            "title": "Dependent Event",
            "width": 58.2,
            "x": 756.6,
            "y": 42.5,
          },
          Object {
            "children": Array [],
            "dependencies": Array [],
            "duration": 2,
            "end": "2018-08-01",
            "event_index": 0,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "bar",
            "height": 20,
            "label": "#6bc2e2",
            "offset": 34,
            "page": 1,
            "repeat": true,
            "start": "2018-08-01",
            "status": "active",
            "title": "Dependent Event",
            "width": 58.2,
            "x": 960.3000000000001,
            "y": 42.5,
          },
          Object {
            "children": Array [],
            "dependencies": Array [],
            "duration": 2,
            "end": "2018-08-08",
            "event_index": 0,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "bar",
            "height": 20,
            "label": "#6bc2e2",
            "offset": 41,
            "page": 1,
            "repeat": true,
            "start": "2018-08-08",
            "status": "active",
            "title": "Dependent Event",
            "width": 58.2,
            "x": 1164,
            "y": 42.5,
          },
          Object {
            "children": Array [],
            "dependencies": Array [],
            "duration": 2,
            "end": "2018-08-15",
            "event_index": 0,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "bar",
            "height": 20,
            "label": "#6bc2e2",
            "offset": 48,
            "page": 1,
            "repeat": true,
            "start": "2018-08-15",
            "status": "active",
            "title": "Dependent Event",
            "width": 58.2,
            "x": 1367.7,
            "y": 42.5,
          },
        ],
        "dependencies": Array [],
        "duration": 2,
        "event_index": 0,
        "frequency": Object {
          "key": "weekly",
        },
        "group_by": "bar",
        "height": 20,
        "label": "#6bc2e2",
        "offset": 20,
        "page": 1,
        "status": "active",
        "title": "Dependent Event",
        "width": 58.2,
        "x": 552.9,
        "y": 42.5,
      },
      Object {
        "children": Array [],
        "dependencies": Array [
          5,
        ],
        "duration": 4,
        "event_index": 1,
        "frequency": Object {
          "key": "once",
        },
        "group_by": "bar",
        "height": 20,
        "label": "#6bc2e2",
        "offset": 22,
        "page": 1,
        "status": "active",
        "title": "Another Event",
        "width": 116.4,
        "x": 611.1,
        "y": 77.5,
      },
    ],
    "groupings": Array [
      "dependent event",
      "another event",
    ],
    "height": 70,
    "links": Array [
      Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "dependencies": Array [],
              "duration": 2,
              "end": "2018-07-25",
              "event_index": 0,
              "frequency": Object {
                "key": "weekly",
              },
              "group_by": "bar",
              "height": 20,
              "label": "#6bc2e2",
              "offset": 27,
              "page": 1,
              "repeat": true,
              "start": "2018-07-25",
              "status": "active",
              "title": "Dependent Event",
              "width": 58.2,
              "x": 756.6,
              "y": 42.5,
            },
            Object {
              "children": Array [],
              "dependencies": Array [],
              "duration": 2,
              "end": "2018-08-01",
              "event_index": 0,
              "frequency": Object {
                "key": "weekly",
              },
              "group_by": "bar",
              "height": 20,
              "label": "#6bc2e2",
              "offset": 34,
              "page": 1,
              "repeat": true,
              "start": "2018-08-01",
              "status": "active",
              "title": "Dependent Event",
              "width": 58.2,
              "x": 960.3000000000001,
              "y": 42.5,
            },
            Object {
              "children": Array [],
              "dependencies": Array [],
              "duration": 2,
              "end": "2018-08-08",
              "event_index": 0,
              "frequency": Object {
                "key": "weekly",
              },
              "group_by": "bar",
              "height": 20,
              "label": "#6bc2e2",
              "offset": 41,
              "page": 1,
              "repeat": true,
              "start": "2018-08-08",
              "status": "active",
              "title": "Dependent Event",
              "width": 58.2,
              "x": 1164,
              "y": 42.5,
            },
            Object {
              "children": Array [],
              "dependencies": Array [],
              "duration": 2,
              "end": "2018-08-15",
              "event_index": 0,
              "frequency": Object {
                "key": "weekly",
              },
              "group_by": "bar",
              "height": 20,
              "label": "#6bc2e2",
              "offset": 48,
              "page": 1,
              "repeat": true,
              "start": "2018-08-15",
              "status": "active",
              "title": "Dependent Event",
              "width": 58.2,
              "x": 1367.7,
              "y": 42.5,
            },
          ],
          "dependencies": Array [],
          "duration": 2,
          "event_index": 0,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "bar",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 20,
          "page": 1,
          "status": "active",
          "title": "Dependent Event",
          "width": 58.2,
          "x": 552.9,
          "y": 42.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [
            5,
          ],
          "duration": 4,
          "event_index": 1,
          "frequency": Object {
            "key": "once",
          },
          "group_by": "bar",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 22,
          "page": 1,
          "status": "active",
          "title": "Another Event",
          "width": 116.4,
          "x": 611.1,
          "y": 77.5,
        },
      ],
    ],
    "show": true,
    "title": "bar",
  },
  Object {
    "blocks": Array [
      Object {
        "children": Array [],
        "duration": 3,
        "event_index": 0,
        "group_by": "",
        "height": 20,
        "label": "#8bccba",
        "offset": 15,
        "page": 1,
        "readOnly": true,
        "status": "complete",
        "title": "Line One",
        "width": 87.30000000000001,
        "x": 407.40000000000003,
        "y": 42.5,
      },
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "duration": 2,
            "end": "2018-07-25",
            "event_index": 1,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "",
            "height": 20,
            "label": "#6bc2e2",
            "offset": 15,
            "page": 1,
            "readOnly": false,
            "repeat": true,
            "start": "2018-07-25",
            "status": "active",
            "title": "Line Two",
            "width": 58.2,
            "x": 407.40000000000003,
            "y": 77.5,
          },
          Object {
            "children": Array [],
            "duration": 2,
            "end": "2018-08-01",
            "event_index": 1,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "",
            "height": 20,
            "label": "#6bc2e2",
            "offset": 22,
            "page": 1,
            "readOnly": false,
            "repeat": true,
            "start": "2018-08-01",
            "status": "active",
            "title": "Line Two",
            "width": 58.2,
            "x": 611.1,
            "y": 77.5,
          },
          Object {
            "children": Array [],
            "duration": 2,
            "end": "2018-08-08",
            "event_index": 1,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "",
            "height": 20,
            "label": "#6bc2e2",
            "offset": 29,
            "page": 1,
            "readOnly": false,
            "repeat": true,
            "start": "2018-08-08",
            "status": "active",
            "title": "Line Two",
            "width": 58.2,
            "x": 814.8000000000001,
            "y": 77.5,
          },
          Object {
            "children": Array [],
            "duration": 2,
            "end": "2018-08-15",
            "event_index": 1,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "",
            "height": 20,
            "label": "#6bc2e2",
            "offset": 36,
            "page": 1,
            "readOnly": false,
            "repeat": true,
            "start": "2018-08-15",
            "status": "active",
            "title": "Line Two",
            "width": 58.2,
            "x": 1018.5,
            "y": 77.5,
          },
        ],
        "duration": 2,
        "event_index": 1,
        "frequency": Object {
          "key": "weekly",
        },
        "group_by": "",
        "height": 20,
        "label": "#6bc2e2",
        "offset": 8,
        "page": 1,
        "readOnly": false,
        "status": "active",
        "title": "Line Two",
        "width": 58.2,
        "x": 203.70000000000002,
        "y": 77.5,
      },
      Object {
        "children": Array [],
        "duration": 3,
        "event_index": 2,
        "group_by": "",
        "height": 20,
        "label": "#fbbd08",
        "offset": 13,
        "page": 1,
        "readOnly": false,
        "status": "in_progress",
        "title": "Line Three",
        "width": 87.30000000000001,
        "x": 349.20000000000005,
        "y": 112.5,
      },
      Object {
        "children": Array [],
        "dependencies": Array [
          1,
        ],
        "duration": 4,
        "event_index": 3,
        "group_by": "",
        "height": 20,
        "label": "#6bc2e2",
        "offset": 18,
        "page": 1,
        "readOnly": false,
        "status": "",
        "title": "Line four",
        "width": 116.4,
        "x": 494.70000000000005,
        "y": 147.5,
      },
    ],
    "groupings": Array [
      "line one",
      "line two",
      "line three",
      "line four",
    ],
    "height": 140,
    "links": Array [
      Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "duration": 2,
              "end": "2018-07-25",
              "event_index": 1,
              "frequency": Object {
                "key": "weekly",
              },
              "group_by": "",
              "height": 20,
              "label": "#6bc2e2",
              "offset": 15,
              "page": 1,
              "readOnly": false,
              "repeat": true,
              "start": "2018-07-25",
              "status": "active",
              "title": "Line Two",
              "width": 58.2,
              "x": 407.40000000000003,
              "y": 77.5,
            },
            Object {
              "children": Array [],
              "duration": 2,
              "end": "2018-08-01",
              "event_index": 1,
              "frequency": Object {
                "key": "weekly",
              },
              "group_by": "",
              "height": 20,
              "label": "#6bc2e2",
              "offset": 22,
              "page": 1,
              "readOnly": false,
              "repeat": true,
              "start": "2018-08-01",
              "status": "active",
              "title": "Line Two",
              "width": 58.2,
              "x": 611.1,
              "y": 77.5,
            },
            Object {
              "children": Array [],
              "duration": 2,
              "end": "2018-08-08",
              "event_index": 1,
              "frequency": Object {
                "key": "weekly",
              },
              "group_by": "",
              "height": 20,
              "label": "#6bc2e2",
              "offset": 29,
              "page": 1,
              "readOnly": false,
              "repeat": true,
              "start": "2018-08-08",
              "status": "active",
              "title": "Line Two",
              "width": 58.2,
              "x": 814.8000000000001,
              "y": 77.5,
            },
            Object {
              "children": Array [],
              "duration": 2,
              "end": "2018-08-15",
              "event_index": 1,
              "frequency": Object {
                "key": "weekly",
              },
              "group_by": "",
              "height": 20,
              "label": "#6bc2e2",
              "offset": 36,
              "page": 1,
              "readOnly": false,
              "repeat": true,
              "start": "2018-08-15",
              "status": "active",
              "title": "Line Two",
              "width": 58.2,
              "x": 1018.5,
              "y": 77.5,
            },
          ],
          "duration": 2,
          "event_index": 1,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 8,
          "page": 1,
          "readOnly": false,
          "status": "active",
          "title": "Line Two",
          "width": 58.2,
          "x": 203.70000000000002,
          "y": 77.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [
            1,
          ],
          "duration": 4,
          "event_index": 3,
          "group_by": "",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 18,
          "page": 1,
          "readOnly": false,
          "status": "",
          "title": "Line four",
          "width": 116.4,
          "x": 494.70000000000005,
          "y": 147.5,
        },
      ],
    ],
    "show": true,
    "title": "misc",
  },
]
`;

exports[`Build up data methods/computed props for ganttData getChildPositions sets the event_index and calls the position method for each child event 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "duration": 2,
      "end": "2018-07-25",
      "event_index": 5,
      "frequency": Object {
        "key": "weekly",
      },
      "group_by": "",
      "height": 20,
      "label": "#6bc2e2",
      "offset": 15,
      "page": 1,
      "readOnly": false,
      "repeat": true,
      "start": "2018-07-25",
      "status": "active",
      "title": "Line Two",
      "width": 58.2,
      "x": 407.40000000000003,
      "y": 217.5,
    },
    Object {
      "children": Array [],
      "duration": 2,
      "end": "2018-08-01",
      "event_index": 5,
      "frequency": Object {
        "key": "weekly",
      },
      "group_by": "",
      "height": 20,
      "label": "#6bc2e2",
      "offset": 22,
      "page": 1,
      "readOnly": false,
      "repeat": true,
      "start": "2018-08-01",
      "status": "active",
      "title": "Line Two",
      "width": 58.2,
      "x": 611.1,
      "y": 217.5,
    },
    Object {
      "children": Array [],
      "duration": 2,
      "end": "2018-08-08",
      "event_index": 5,
      "frequency": Object {
        "key": "weekly",
      },
      "group_by": "",
      "height": 20,
      "label": "#6bc2e2",
      "offset": 29,
      "page": 1,
      "readOnly": false,
      "repeat": true,
      "start": "2018-08-08",
      "status": "active",
      "title": "Line Two",
      "width": 58.2,
      "x": 814.8000000000001,
      "y": 217.5,
    },
    Object {
      "children": Array [],
      "duration": 2,
      "end": "2018-08-15",
      "event_index": 5,
      "frequency": Object {
        "key": "weekly",
      },
      "group_by": "",
      "height": 20,
      "label": "#6bc2e2",
      "offset": 36,
      "page": 1,
      "readOnly": false,
      "repeat": true,
      "start": "2018-08-15",
      "status": "active",
      "title": "Line Two",
      "width": 58.2,
      "x": 1018.5,
      "y": 217.5,
    },
  ],
  "duration": 2,
  "event_index": 1,
  "frequency": Object {
    "key": "weekly",
  },
  "group_by": "",
  "height": 20,
  "label": "#6bc2e2",
  "offset": 8,
  "page": 1,
  "readOnly": false,
  "status": "active",
  "title": "Line Two",
  "width": 58.2,
  "x": 203.70000000000002,
  "y": 77.5,
}
`;

exports[`Build up data methods/computed props for ganttData getFilteredGroups doesnt have a misc group, should return one group 1`] = `
Object {
  "firstGroup": Array [
    Object {
      "id": 1,
      "name": "first group event 1",
    },
    Object {
      "id": 2,
      "name": "first group event 2",
    },
  ],
}
`;

exports[`Build up data methods/computed props for ganttData getFilteredGroups has a misc group and an empty group, should return 3 groups 1`] = `
Object {
  "firstGroup": Array [
    Object {
      "id": 1,
      "name": "first group event 1",
    },
    Object {
      "id": 2,
      "name": "first group event 2",
    },
  ],
  "misc": Array [
    Object {
      "id": 1,
      "name": "misc event 1",
    },
    Object {
      "id": 2,
      "name": "misc event 2",
    },
    Object {
      "id": 3,
      "name": "misc event 3",
    },
  ],
  "thirdGroup": Array [
    Object {
      "id": 1,
      "name": "third group event 1",
    },
  ],
}
`;

exports[`Build up data methods/computed props for ganttData getFilteredGroups has an empty misc group, and an empty group, should return 2 groups 1`] = `
Object {
  "secondGroup": Array [
    Object {
      "id": 1,
      "name": "second group event 1",
    },
    Object {
      "id": 1,
      "name": "second group event 1",
    },
  ],
  "thirdGroup": Array [
    Object {
      "id": 1,
      "name": "third group event 1",
    },
  ],
}
`;

exports[`Build up data methods/computed props for ganttData getFilteredGroups has no groups, should return an empty object 1`] = `Object {}`;

exports[`Build up data methods/computed props for ganttData getFilteredGroups if processNodes is empty, it returns an empty object 1`] = `Object {}`;

exports[`Build up data methods/computed props for ganttData getItemLinks gets linked events for each event with dependencies 1`] = `
Object {
  "": Array [
    Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "duration": 2,
            "end": "2018-07-25",
            "event_index": 1,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "",
            "height": 20,
            "label": "#6bc2e2",
            "offset": 15,
            "page": 1,
            "readOnly": false,
            "repeat": true,
            "start": "2018-07-25",
            "status": "active",
            "title": "Line Two",
            "width": 58.2,
            "x": 407.40000000000003,
            "y": 77.5,
          },
          Object {
            "children": Array [],
            "duration": 2,
            "end": "2018-08-01",
            "event_index": 1,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "",
            "height": 20,
            "label": "#6bc2e2",
            "offset": 22,
            "page": 1,
            "readOnly": false,
            "repeat": true,
            "start": "2018-08-01",
            "status": "active",
            "title": "Line Two",
            "width": 58.2,
            "x": 611.1,
            "y": 77.5,
          },
          Object {
            "children": Array [],
            "duration": 2,
            "end": "2018-08-08",
            "event_index": 1,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "",
            "height": 20,
            "label": "#6bc2e2",
            "offset": 29,
            "page": 1,
            "readOnly": false,
            "repeat": true,
            "start": "2018-08-08",
            "status": "active",
            "title": "Line Two",
            "width": 58.2,
            "x": 814.8000000000001,
            "y": 77.5,
          },
          Object {
            "children": Array [],
            "duration": 2,
            "end": "2018-08-15",
            "event_index": 1,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "",
            "height": 20,
            "label": "#6bc2e2",
            "offset": 36,
            "page": 1,
            "readOnly": false,
            "repeat": true,
            "start": "2018-08-15",
            "status": "active",
            "title": "Line Two",
            "width": 58.2,
            "x": 1018.5,
            "y": 77.5,
          },
        ],
        "duration": 2,
        "event_index": 1,
        "frequency": Object {
          "key": "weekly",
        },
        "group_by": "",
        "height": 20,
        "label": "#6bc2e2",
        "offset": 8,
        "page": 1,
        "readOnly": false,
        "status": "active",
        "title": "Line Two",
        "width": 58.2,
        "x": 203.70000000000002,
        "y": 77.5,
      },
      Object {
        "children": Array [],
        "dependencies": Array [
          1,
        ],
        "duration": 4,
        "event_index": 3,
        "group_by": "",
        "height": 20,
        "label": "#6bc2e2",
        "offset": 18,
        "page": 1,
        "readOnly": false,
        "status": "",
        "title": "Line four",
        "width": 116.4,
        "x": 494.70000000000005,
        "y": 147.5,
      },
    ],
  ],
  "bar": Array [
    Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "dependencies": Array [],
            "duration": 2,
            "end": "2018-07-25",
            "event_index": 0,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "bar",
            "height": 20,
            "label": "#6bc2e2",
            "offset": 27,
            "page": 1,
            "repeat": true,
            "start": "2018-07-25",
            "status": "active",
            "title": "Dependent Event",
            "width": 58.2,
            "x": 756.6,
            "y": 42.5,
          },
          Object {
            "children": Array [],
            "dependencies": Array [],
            "duration": 2,
            "end": "2018-08-01",
            "event_index": 0,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "bar",
            "height": 20,
            "label": "#6bc2e2",
            "offset": 34,
            "page": 1,
            "repeat": true,
            "start": "2018-08-01",
            "status": "active",
            "title": "Dependent Event",
            "width": 58.2,
            "x": 960.3000000000001,
            "y": 42.5,
          },
          Object {
            "children": Array [],
            "dependencies": Array [],
            "duration": 2,
            "end": "2018-08-08",
            "event_index": 0,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "bar",
            "height": 20,
            "label": "#6bc2e2",
            "offset": 41,
            "page": 1,
            "repeat": true,
            "start": "2018-08-08",
            "status": "active",
            "title": "Dependent Event",
            "width": 58.2,
            "x": 1164,
            "y": 42.5,
          },
          Object {
            "children": Array [],
            "dependencies": Array [],
            "duration": 2,
            "end": "2018-08-15",
            "event_index": 0,
            "frequency": Object {
              "key": "weekly",
            },
            "group_by": "bar",
            "height": 20,
            "label": "#6bc2e2",
            "offset": 48,
            "page": 1,
            "repeat": true,
            "start": "2018-08-15",
            "status": "active",
            "title": "Dependent Event",
            "width": 58.2,
            "x": 1367.7,
            "y": 42.5,
          },
        ],
        "dependencies": Array [],
        "duration": 2,
        "event_index": 0,
        "frequency": Object {
          "key": "weekly",
        },
        "group_by": "bar",
        "height": 20,
        "label": "#6bc2e2",
        "offset": 20,
        "page": 1,
        "status": "active",
        "title": "Dependent Event",
        "width": 58.2,
        "x": 552.9,
        "y": 42.5,
      },
      Object {
        "children": Array [],
        "dependencies": Array [
          5,
        ],
        "duration": 4,
        "event_index": 1,
        "frequency": Object {
          "key": "once",
        },
        "group_by": "bar",
        "height": 20,
        "label": "#6bc2e2",
        "offset": 22,
        "page": 1,
        "status": "active",
        "title": "Another Event",
        "width": 116.4,
        "x": 611.1,
        "y": 77.5,
      },
    ],
  ],
  "misc": Array [],
}
`;

exports[`Build up data methods/computed props for ganttData position sets the position data on an event 1`] = `
Array [
  Object {
    "children": Array [],
    "duration": 3,
    "event_index": 0,
    "group_by": "",
    "height": 20,
    "label": "#8bccba",
    "offset": 15,
    "page": 1,
    "readOnly": true,
    "status": "complete",
    "title": "Line One",
    "width": 87.30000000000001,
    "x": 407.40000000000003,
    "y": 42.5,
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "duration": 2,
        "end": "2018-07-25",
        "event_index": 1,
        "frequency": Object {
          "key": "weekly",
        },
        "group_by": "",
        "height": 20,
        "label": "#6bc2e2",
        "offset": 15,
        "page": 1,
        "readOnly": false,
        "repeat": true,
        "start": "2018-07-25",
        "status": "active",
        "title": "Line Two",
        "width": 58.2,
        "x": 407.40000000000003,
        "y": 77.5,
      },
      Object {
        "children": Array [],
        "duration": 2,
        "end": "2018-08-01",
        "event_index": 1,
        "frequency": Object {
          "key": "weekly",
        },
        "group_by": "",
        "height": 20,
        "label": "#6bc2e2",
        "offset": 22,
        "page": 1,
        "readOnly": false,
        "repeat": true,
        "start": "2018-08-01",
        "status": "active",
        "title": "Line Two",
        "width": 58.2,
        "x": 611.1,
        "y": 77.5,
      },
      Object {
        "children": Array [],
        "duration": 2,
        "end": "2018-08-08",
        "event_index": 1,
        "frequency": Object {
          "key": "weekly",
        },
        "group_by": "",
        "height": 20,
        "label": "#6bc2e2",
        "offset": 29,
        "page": 1,
        "readOnly": false,
        "repeat": true,
        "start": "2018-08-08",
        "status": "active",
        "title": "Line Two",
        "width": 58.2,
        "x": 814.8000000000001,
        "y": 77.5,
      },
      Object {
        "children": Array [],
        "duration": 2,
        "end": "2018-08-15",
        "event_index": 1,
        "frequency": Object {
          "key": "weekly",
        },
        "group_by": "",
        "height": 20,
        "label": "#6bc2e2",
        "offset": 36,
        "page": 1,
        "readOnly": false,
        "repeat": true,
        "start": "2018-08-15",
        "status": "active",
        "title": "Line Two",
        "width": 58.2,
        "x": 1018.5,
        "y": 77.5,
      },
    ],
    "duration": 2,
    "event_index": 1,
    "frequency": Object {
      "key": "weekly",
    },
    "group_by": "",
    "height": 20,
    "label": "#6bc2e2",
    "offset": 8,
    "page": 1,
    "readOnly": false,
    "status": "active",
    "title": "Line Two",
    "width": 58.2,
    "x": 203.70000000000002,
    "y": 77.5,
  },
  Object {
    "children": Array [],
    "duration": 3,
    "event_index": 2,
    "group_by": "",
    "height": 20,
    "label": "#fbbd08",
    "offset": 13,
    "page": 1,
    "readOnly": false,
    "status": "in_progress",
    "title": "Line Three",
    "width": 87.30000000000001,
    "x": 349.20000000000005,
    "y": 112.5,
  },
  Object {
    "children": Array [],
    "dependencies": Array [
      1,
    ],
    "duration": 4,
    "event_index": 3,
    "group_by": "",
    "height": 20,
    "label": "#6bc2e2",
    "offset": 18,
    "page": 1,
    "readOnly": false,
    "status": "",
    "title": "Line four",
    "width": 116.4,
    "x": 494.70000000000005,
    "y": 147.5,
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "dependencies": Array [],
        "duration": 2,
        "end": "2018-07-25",
        "event_index": 0,
        "frequency": Object {
          "key": "weekly",
        },
        "group_by": "foo",
        "height": 20,
        "label": "#fbbd08",
        "offset": 25,
        "page": 1,
        "repeat": true,
        "start": "2018-07-25",
        "status": "in_progress",
        "title": "A New Event",
        "width": 58.2,
        "x": 698.4000000000001,
        "y": 42.5,
      },
      Object {
        "children": Array [],
        "dependencies": Array [],
        "duration": 2,
        "end": "2018-08-01",
        "event_index": 0,
        "frequency": Object {
          "key": "weekly",
        },
        "group_by": "foo",
        "height": 20,
        "label": "#fbbd08",
        "offset": 32,
        "page": 1,
        "repeat": true,
        "start": "2018-08-01",
        "status": "in_progress",
        "title": "A New Event",
        "width": 58.2,
        "x": 902.1,
        "y": 42.5,
      },
      Object {
        "children": Array [],
        "dependencies": Array [],
        "duration": 2,
        "end": "2018-08-08",
        "event_index": 0,
        "frequency": Object {
          "key": "weekly",
        },
        "group_by": "foo",
        "height": 20,
        "label": "#fbbd08",
        "offset": 39,
        "page": 1,
        "repeat": true,
        "start": "2018-08-08",
        "status": "in_progress",
        "title": "A New Event",
        "width": 58.2,
        "x": 1105.8,
        "y": 42.5,
      },
      Object {
        "children": Array [],
        "dependencies": Array [],
        "duration": 2,
        "end": "2018-08-15",
        "event_index": 0,
        "frequency": Object {
          "key": "weekly",
        },
        "group_by": "foo",
        "height": 20,
        "label": "#fbbd08",
        "offset": 46,
        "page": 1,
        "repeat": true,
        "start": "2018-08-15",
        "status": "in_progress",
        "title": "A New Event",
        "width": 58.2,
        "x": 1309.5,
        "y": 42.5,
      },
    ],
    "dependencies": Array [],
    "duration": 2,
    "event_index": 0,
    "frequency": Object {
      "key": "weekly",
    },
    "group_by": "foo",
    "height": 20,
    "label": "#fbbd08",
    "offset": 18,
    "page": 1,
    "status": "in_progress",
    "title": "A New Event",
    "width": 58.2,
    "x": 494.70000000000005,
    "y": 42.5,
  },
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "dependencies": Array [],
        "duration": 2,
        "end": "2018-07-25",
        "event_index": 0,
        "frequency": Object {
          "key": "weekly",
        },
        "group_by": "bar",
        "height": 20,
        "label": "#6bc2e2",
        "offset": 27,
        "page": 1,
        "repeat": true,
        "start": "2018-07-25",
        "status": "active",
        "title": "Dependent Event",
        "width": 58.2,
        "x": 756.6,
        "y": 42.5,
      },
      Object {
        "children": Array [],
        "dependencies": Array [],
        "duration": 2,
        "end": "2018-08-01",
        "event_index": 0,
        "frequency": Object {
          "key": "weekly",
        },
        "group_by": "bar",
        "height": 20,
        "label": "#6bc2e2",
        "offset": 34,
        "page": 1,
        "repeat": true,
        "start": "2018-08-01",
        "status": "active",
        "title": "Dependent Event",
        "width": 58.2,
        "x": 960.3000000000001,
        "y": 42.5,
      },
      Object {
        "children": Array [],
        "dependencies": Array [],
        "duration": 2,
        "end": "2018-08-08",
        "event_index": 0,
        "frequency": Object {
          "key": "weekly",
        },
        "group_by": "bar",
        "height": 20,
        "label": "#6bc2e2",
        "offset": 41,
        "page": 1,
        "repeat": true,
        "start": "2018-08-08",
        "status": "active",
        "title": "Dependent Event",
        "width": 58.2,
        "x": 1164,
        "y": 42.5,
      },
      Object {
        "children": Array [],
        "dependencies": Array [],
        "duration": 2,
        "end": "2018-08-15",
        "event_index": 0,
        "frequency": Object {
          "key": "weekly",
        },
        "group_by": "bar",
        "height": 20,
        "label": "#6bc2e2",
        "offset": 48,
        "page": 1,
        "repeat": true,
        "start": "2018-08-15",
        "status": "active",
        "title": "Dependent Event",
        "width": 58.2,
        "x": 1367.7,
        "y": 42.5,
      },
    ],
    "dependencies": Array [],
    "duration": 2,
    "event_index": 0,
    "frequency": Object {
      "key": "weekly",
    },
    "group_by": "bar",
    "height": 20,
    "label": "#6bc2e2",
    "offset": 20,
    "page": 1,
    "status": "active",
    "title": "Dependent Event",
    "width": 58.2,
    "x": 552.9,
    "y": 42.5,
  },
  Object {
    "children": Array [],
    "dependencies": Array [
      5,
    ],
    "duration": 4,
    "event_index": 1,
    "frequency": Object {
      "key": "once",
    },
    "group_by": "bar",
    "height": 20,
    "label": "#6bc2e2",
    "offset": 22,
    "page": 1,
    "status": "active",
    "title": "Another Event",
    "width": 116.4,
    "x": 611.1,
    "y": 77.5,
  },
]
`;

exports[`Build up data methods/computed props for ganttData processGroupedData provides all events in the fallbackCategory group if categoryGroupings is false (default) 1`] = `
Object {
  "misc": Array [
    Object {
      "children": Array [],
      "duration": 3,
      "event_index": 0,
      "group_by": "",
      "height": 20,
      "label": "#8bccba",
      "offset": 15,
      "page": 1,
      "readOnly": true,
      "status": "complete",
      "title": "Line One",
      "width": 87.30000000000001,
      "x": 407.40000000000003,
      "y": 7.5,
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "duration": 2,
          "end": "2018-07-25",
          "event_index": 1,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 15,
          "page": 1,
          "readOnly": false,
          "repeat": true,
          "start": "2018-07-25",
          "status": "active",
          "title": "Line Two",
          "width": 58.2,
          "x": 407.40000000000003,
          "y": 42.5,
        },
        Object {
          "children": Array [],
          "duration": 2,
          "end": "2018-08-01",
          "event_index": 1,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 22,
          "page": 1,
          "readOnly": false,
          "repeat": true,
          "start": "2018-08-01",
          "status": "active",
          "title": "Line Two",
          "width": 58.2,
          "x": 611.1,
          "y": 42.5,
        },
        Object {
          "children": Array [],
          "duration": 2,
          "end": "2018-08-08",
          "event_index": 1,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 29,
          "page": 1,
          "readOnly": false,
          "repeat": true,
          "start": "2018-08-08",
          "status": "active",
          "title": "Line Two",
          "width": 58.2,
          "x": 814.8000000000001,
          "y": 42.5,
        },
        Object {
          "children": Array [],
          "duration": 2,
          "end": "2018-08-15",
          "event_index": 1,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 36,
          "page": 1,
          "readOnly": false,
          "repeat": true,
          "start": "2018-08-15",
          "status": "active",
          "title": "Line Two",
          "width": 58.2,
          "x": 1018.5,
          "y": 42.5,
        },
      ],
      "duration": 2,
      "event_index": 1,
      "frequency": Object {
        "key": "weekly",
      },
      "group_by": "",
      "height": 20,
      "label": "#6bc2e2",
      "offset": 8,
      "page": 1,
      "readOnly": false,
      "status": "active",
      "title": "Line Two",
      "width": 58.2,
      "x": 203.70000000000002,
      "y": 42.5,
    },
    Object {
      "children": Array [],
      "duration": 3,
      "event_index": 2,
      "group_by": "",
      "height": 20,
      "label": "#fbbd08",
      "offset": 13,
      "page": 1,
      "readOnly": false,
      "status": "in_progress",
      "title": "Line Three",
      "width": 87.30000000000001,
      "x": 349.20000000000005,
      "y": 77.5,
    },
    Object {
      "children": Array [],
      "dependencies": Array [
        1,
      ],
      "duration": 4,
      "event_index": 3,
      "group_by": "",
      "height": 20,
      "label": "#6bc2e2",
      "offset": 18,
      "page": 1,
      "readOnly": false,
      "status": "",
      "title": "Line four",
      "width": 116.4,
      "x": 494.70000000000005,
      "y": 112.5,
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-07-25",
          "event_index": 4,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "foo",
          "height": 20,
          "label": "#fbbd08",
          "offset": 25,
          "page": 1,
          "repeat": true,
          "start": "2018-07-25",
          "status": "in_progress",
          "title": "A New Event",
          "width": 58.2,
          "x": 698.4000000000001,
          "y": 147.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-08-01",
          "event_index": 4,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "foo",
          "height": 20,
          "label": "#fbbd08",
          "offset": 32,
          "page": 1,
          "repeat": true,
          "start": "2018-08-01",
          "status": "in_progress",
          "title": "A New Event",
          "width": 58.2,
          "x": 902.1,
          "y": 147.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-08-08",
          "event_index": 4,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "foo",
          "height": 20,
          "label": "#fbbd08",
          "offset": 39,
          "page": 1,
          "repeat": true,
          "start": "2018-08-08",
          "status": "in_progress",
          "title": "A New Event",
          "width": 58.2,
          "x": 1105.8,
          "y": 147.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-08-15",
          "event_index": 4,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "foo",
          "height": 20,
          "label": "#fbbd08",
          "offset": 46,
          "page": 1,
          "repeat": true,
          "start": "2018-08-15",
          "status": "in_progress",
          "title": "A New Event",
          "width": 58.2,
          "x": 1309.5,
          "y": 147.5,
        },
      ],
      "dependencies": Array [],
      "duration": 2,
      "event_index": 4,
      "frequency": Object {
        "key": "weekly",
      },
      "group_by": "foo",
      "height": 20,
      "label": "#fbbd08",
      "offset": 18,
      "page": 1,
      "status": "in_progress",
      "title": "A New Event",
      "width": 58.2,
      "x": 494.70000000000005,
      "y": 147.5,
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-07-25",
          "event_index": 5,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "bar",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 27,
          "page": 1,
          "repeat": true,
          "start": "2018-07-25",
          "status": "active",
          "title": "Dependent Event",
          "width": 58.2,
          "x": 756.6,
          "y": 182.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-08-01",
          "event_index": 5,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "bar",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 34,
          "page": 1,
          "repeat": true,
          "start": "2018-08-01",
          "status": "active",
          "title": "Dependent Event",
          "width": 58.2,
          "x": 960.3000000000001,
          "y": 182.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-08-08",
          "event_index": 5,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "bar",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 41,
          "page": 1,
          "repeat": true,
          "start": "2018-08-08",
          "status": "active",
          "title": "Dependent Event",
          "width": 58.2,
          "x": 1164,
          "y": 182.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-08-15",
          "event_index": 5,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "bar",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 48,
          "page": 1,
          "repeat": true,
          "start": "2018-08-15",
          "status": "active",
          "title": "Dependent Event",
          "width": 58.2,
          "x": 1367.7,
          "y": 182.5,
        },
      ],
      "dependencies": Array [],
      "duration": 2,
      "event_index": 5,
      "frequency": Object {
        "key": "weekly",
      },
      "group_by": "bar",
      "height": 20,
      "label": "#6bc2e2",
      "offset": 20,
      "page": 1,
      "status": "active",
      "title": "Dependent Event",
      "width": 58.2,
      "x": 552.9,
      "y": 182.5,
    },
    Object {
      "children": Array [],
      "dependencies": Array [
        5,
      ],
      "duration": 4,
      "event_index": 6,
      "frequency": Object {
        "key": "once",
      },
      "group_by": "bar",
      "height": 20,
      "label": "#6bc2e2",
      "offset": 22,
      "page": 1,
      "status": "active",
      "title": "Another Event",
      "width": 116.4,
      "x": 611.1,
      "y": 217.5,
    },
  ],
}
`;

exports[`Build up data methods/computed props for ganttData processGroupedData provides events in groups defined by categoryGroupings prop, if an event group doesnt exist, events are placed in the fallback category 1`] = `
Object {
  "bar": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-07-25",
          "event_index": 0,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "bar",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 27,
          "page": 1,
          "repeat": true,
          "start": "2018-07-25",
          "status": "active",
          "title": "Dependent Event",
          "width": 58.2,
          "x": 756.6,
          "y": 42.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-08-01",
          "event_index": 0,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "bar",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 34,
          "page": 1,
          "repeat": true,
          "start": "2018-08-01",
          "status": "active",
          "title": "Dependent Event",
          "width": 58.2,
          "x": 960.3000000000001,
          "y": 42.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-08-08",
          "event_index": 0,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "bar",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 41,
          "page": 1,
          "repeat": true,
          "start": "2018-08-08",
          "status": "active",
          "title": "Dependent Event",
          "width": 58.2,
          "x": 1164,
          "y": 42.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-08-15",
          "event_index": 0,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "bar",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 48,
          "page": 1,
          "repeat": true,
          "start": "2018-08-15",
          "status": "active",
          "title": "Dependent Event",
          "width": 58.2,
          "x": 1367.7,
          "y": 42.5,
        },
      ],
      "dependencies": Array [],
      "duration": 2,
      "event_index": 0,
      "frequency": Object {
        "key": "weekly",
      },
      "group_by": "bar",
      "height": 20,
      "label": "#6bc2e2",
      "offset": 20,
      "page": 1,
      "status": "active",
      "title": "Dependent Event",
      "width": 58.2,
      "x": 552.9,
      "y": 42.5,
    },
    Object {
      "children": Array [],
      "dependencies": Array [
        5,
      ],
      "duration": 4,
      "event_index": 1,
      "frequency": Object {
        "key": "once",
      },
      "group_by": "bar",
      "height": 20,
      "label": "#6bc2e2",
      "offset": 22,
      "page": 1,
      "status": "active",
      "title": "Another Event",
      "width": 116.4,
      "x": 611.1,
      "y": 77.5,
    },
  ],
  "misc": Array [
    Object {
      "children": Array [],
      "duration": 3,
      "event_index": 0,
      "group_by": "",
      "height": 20,
      "label": "#8bccba",
      "offset": 15,
      "page": 1,
      "readOnly": true,
      "status": "complete",
      "title": "Line One",
      "width": 87.30000000000001,
      "x": 407.40000000000003,
      "y": 42.5,
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "duration": 2,
          "end": "2018-07-25",
          "event_index": 1,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 15,
          "page": 1,
          "readOnly": false,
          "repeat": true,
          "start": "2018-07-25",
          "status": "active",
          "title": "Line Two",
          "width": 58.2,
          "x": 407.40000000000003,
          "y": 77.5,
        },
        Object {
          "children": Array [],
          "duration": 2,
          "end": "2018-08-01",
          "event_index": 1,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 22,
          "page": 1,
          "readOnly": false,
          "repeat": true,
          "start": "2018-08-01",
          "status": "active",
          "title": "Line Two",
          "width": 58.2,
          "x": 611.1,
          "y": 77.5,
        },
        Object {
          "children": Array [],
          "duration": 2,
          "end": "2018-08-08",
          "event_index": 1,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 29,
          "page": 1,
          "readOnly": false,
          "repeat": true,
          "start": "2018-08-08",
          "status": "active",
          "title": "Line Two",
          "width": 58.2,
          "x": 814.8000000000001,
          "y": 77.5,
        },
        Object {
          "children": Array [],
          "duration": 2,
          "end": "2018-08-15",
          "event_index": 1,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 36,
          "page": 1,
          "readOnly": false,
          "repeat": true,
          "start": "2018-08-15",
          "status": "active",
          "title": "Line Two",
          "width": 58.2,
          "x": 1018.5,
          "y": 77.5,
        },
      ],
      "duration": 2,
      "event_index": 1,
      "frequency": Object {
        "key": "weekly",
      },
      "group_by": "",
      "height": 20,
      "label": "#6bc2e2",
      "offset": 8,
      "page": 1,
      "readOnly": false,
      "status": "active",
      "title": "Line Two",
      "width": 58.2,
      "x": 203.70000000000002,
      "y": 77.5,
    },
    Object {
      "children": Array [],
      "duration": 3,
      "event_index": 2,
      "group_by": "",
      "height": 20,
      "label": "#fbbd08",
      "offset": 13,
      "page": 1,
      "readOnly": false,
      "status": "in_progress",
      "title": "Line Three",
      "width": 87.30000000000001,
      "x": 349.20000000000005,
      "y": 112.5,
    },
    Object {
      "children": Array [],
      "dependencies": Array [
        1,
      ],
      "duration": 4,
      "event_index": 3,
      "group_by": "",
      "height": 20,
      "label": "#6bc2e2",
      "offset": 18,
      "page": 1,
      "readOnly": false,
      "status": "",
      "title": "Line four",
      "width": 116.4,
      "x": 494.70000000000005,
      "y": 147.5,
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-07-25",
          "event_index": 4,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "foo",
          "height": 20,
          "label": "#fbbd08",
          "offset": 25,
          "page": 1,
          "repeat": true,
          "start": "2018-07-25",
          "status": "in_progress",
          "title": "A New Event",
          "width": 58.2,
          "x": 698.4000000000001,
          "y": 182.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-08-01",
          "event_index": 4,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "foo",
          "height": 20,
          "label": "#fbbd08",
          "offset": 32,
          "page": 1,
          "repeat": true,
          "start": "2018-08-01",
          "status": "in_progress",
          "title": "A New Event",
          "width": 58.2,
          "x": 902.1,
          "y": 182.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-08-08",
          "event_index": 4,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "foo",
          "height": 20,
          "label": "#fbbd08",
          "offset": 39,
          "page": 1,
          "repeat": true,
          "start": "2018-08-08",
          "status": "in_progress",
          "title": "A New Event",
          "width": 58.2,
          "x": 1105.8,
          "y": 182.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-08-15",
          "event_index": 4,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "foo",
          "height": 20,
          "label": "#fbbd08",
          "offset": 46,
          "page": 1,
          "repeat": true,
          "start": "2018-08-15",
          "status": "in_progress",
          "title": "A New Event",
          "width": 58.2,
          "x": 1309.5,
          "y": 182.5,
        },
      ],
      "dependencies": Array [],
      "duration": 2,
      "event_index": 4,
      "frequency": Object {
        "key": "weekly",
      },
      "group_by": "foo",
      "height": 20,
      "label": "#fbbd08",
      "offset": 18,
      "page": 1,
      "status": "in_progress",
      "title": "A New Event",
      "width": 58.2,
      "x": 494.70000000000005,
      "y": 182.5,
    },
  ],
}
`;

exports[`Build up data methods/computed props for ganttData processGroupedData provides events in groups defined by the events group_by field if defined or the fallback category 1`] = `
Object {
  "bar": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-07-25",
          "event_index": 0,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "bar",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 27,
          "page": 1,
          "repeat": true,
          "start": "2018-07-25",
          "status": "active",
          "title": "Dependent Event",
          "width": 58.2,
          "x": 756.6,
          "y": 42.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-08-01",
          "event_index": 0,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "bar",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 34,
          "page": 1,
          "repeat": true,
          "start": "2018-08-01",
          "status": "active",
          "title": "Dependent Event",
          "width": 58.2,
          "x": 960.3000000000001,
          "y": 42.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-08-08",
          "event_index": 0,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "bar",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 41,
          "page": 1,
          "repeat": true,
          "start": "2018-08-08",
          "status": "active",
          "title": "Dependent Event",
          "width": 58.2,
          "x": 1164,
          "y": 42.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-08-15",
          "event_index": 0,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "bar",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 48,
          "page": 1,
          "repeat": true,
          "start": "2018-08-15",
          "status": "active",
          "title": "Dependent Event",
          "width": 58.2,
          "x": 1367.7,
          "y": 42.5,
        },
      ],
      "dependencies": Array [],
      "duration": 2,
      "event_index": 0,
      "frequency": Object {
        "key": "weekly",
      },
      "group_by": "bar",
      "height": 20,
      "label": "#6bc2e2",
      "offset": 20,
      "page": 1,
      "status": "active",
      "title": "Dependent Event",
      "width": 58.2,
      "x": 552.9,
      "y": 42.5,
    },
    Object {
      "children": Array [],
      "dependencies": Array [
        5,
      ],
      "duration": 4,
      "event_index": 1,
      "frequency": Object {
        "key": "once",
      },
      "group_by": "bar",
      "height": 20,
      "label": "#6bc2e2",
      "offset": 22,
      "page": 1,
      "status": "active",
      "title": "Another Event",
      "width": 116.4,
      "x": 611.1,
      "y": 77.5,
    },
  ],
  "foo": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-07-25",
          "event_index": 0,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "foo",
          "height": 20,
          "label": "#fbbd08",
          "offset": 25,
          "page": 1,
          "repeat": true,
          "start": "2018-07-25",
          "status": "in_progress",
          "title": "A New Event",
          "width": 58.2,
          "x": 698.4000000000001,
          "y": 42.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-08-01",
          "event_index": 0,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "foo",
          "height": 20,
          "label": "#fbbd08",
          "offset": 32,
          "page": 1,
          "repeat": true,
          "start": "2018-08-01",
          "status": "in_progress",
          "title": "A New Event",
          "width": 58.2,
          "x": 902.1,
          "y": 42.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-08-08",
          "event_index": 0,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "foo",
          "height": 20,
          "label": "#fbbd08",
          "offset": 39,
          "page": 1,
          "repeat": true,
          "start": "2018-08-08",
          "status": "in_progress",
          "title": "A New Event",
          "width": 58.2,
          "x": 1105.8,
          "y": 42.5,
        },
        Object {
          "children": Array [],
          "dependencies": Array [],
          "duration": 2,
          "end": "2018-08-15",
          "event_index": 0,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "foo",
          "height": 20,
          "label": "#fbbd08",
          "offset": 46,
          "page": 1,
          "repeat": true,
          "start": "2018-08-15",
          "status": "in_progress",
          "title": "A New Event",
          "width": 58.2,
          "x": 1309.5,
          "y": 42.5,
        },
      ],
      "dependencies": Array [],
      "duration": 2,
      "event_index": 0,
      "frequency": Object {
        "key": "weekly",
      },
      "group_by": "foo",
      "height": 20,
      "label": "#fbbd08",
      "offset": 18,
      "page": 1,
      "status": "in_progress",
      "title": "A New Event",
      "width": 58.2,
      "x": 494.70000000000005,
      "y": 42.5,
    },
  ],
  "misc": Array [
    Object {
      "children": Array [],
      "duration": 3,
      "event_index": 0,
      "group_by": "",
      "height": 20,
      "label": "#8bccba",
      "offset": 15,
      "page": 1,
      "readOnly": true,
      "status": "complete",
      "title": "Line One",
      "width": 87.30000000000001,
      "x": 407.40000000000003,
      "y": 42.5,
    },
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "duration": 2,
          "end": "2018-07-25",
          "event_index": 1,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 15,
          "page": 1,
          "readOnly": false,
          "repeat": true,
          "start": "2018-07-25",
          "status": "active",
          "title": "Line Two",
          "width": 58.2,
          "x": 407.40000000000003,
          "y": 77.5,
        },
        Object {
          "children": Array [],
          "duration": 2,
          "end": "2018-08-01",
          "event_index": 1,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 22,
          "page": 1,
          "readOnly": false,
          "repeat": true,
          "start": "2018-08-01",
          "status": "active",
          "title": "Line Two",
          "width": 58.2,
          "x": 611.1,
          "y": 77.5,
        },
        Object {
          "children": Array [],
          "duration": 2,
          "end": "2018-08-08",
          "event_index": 1,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 29,
          "page": 1,
          "readOnly": false,
          "repeat": true,
          "start": "2018-08-08",
          "status": "active",
          "title": "Line Two",
          "width": 58.2,
          "x": 814.8000000000001,
          "y": 77.5,
        },
        Object {
          "children": Array [],
          "duration": 2,
          "end": "2018-08-15",
          "event_index": 1,
          "frequency": Object {
            "key": "weekly",
          },
          "group_by": "",
          "height": 20,
          "label": "#6bc2e2",
          "offset": 36,
          "page": 1,
          "readOnly": false,
          "repeat": true,
          "start": "2018-08-15",
          "status": "active",
          "title": "Line Two",
          "width": 58.2,
          "x": 1018.5,
          "y": 77.5,
        },
      ],
      "duration": 2,
      "event_index": 1,
      "frequency": Object {
        "key": "weekly",
      },
      "group_by": "",
      "height": 20,
      "label": "#6bc2e2",
      "offset": 8,
      "page": 1,
      "readOnly": false,
      "status": "active",
      "title": "Line Two",
      "width": 58.2,
      "x": 203.70000000000002,
      "y": 77.5,
    },
    Object {
      "children": Array [],
      "duration": 3,
      "event_index": 2,
      "group_by": "",
      "height": 20,
      "label": "#fbbd08",
      "offset": 13,
      "page": 1,
      "readOnly": false,
      "status": "in_progress",
      "title": "Line Three",
      "width": 87.30000000000001,
      "x": 349.20000000000005,
      "y": 112.5,
    },
    Object {
      "children": Array [],
      "dependencies": Array [
        1,
      ],
      "duration": 4,
      "event_index": 3,
      "group_by": "",
      "height": 20,
      "label": "#6bc2e2",
      "offset": 18,
      "page": 1,
      "readOnly": false,
      "status": "",
      "title": "Line four",
      "width": 116.4,
      "x": 494.70000000000005,
      "y": 147.5,
    },
  ],
}
`;
